# swisstopopy

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api.md  conf.py  environment.yml  index.md  overview.ipynb
swisstopopy/: buildings.py  dem.py  stac.py  tree_canopy.py
tests/: __init__.py  test_swisstopopy.py
