[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project]
name = "swisstopopy"
version = "0.2.0"
description = "swisstopo geospatial Python utilities"
readme = "README.md"
authors = [
  {email = "marti.bosch@epfl.ch", name = "Martí Bosch"}
]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "geopandas>=1.0.0",
  "numpy>=2.0.0",
  "osmnx>=2.0.0",
  "pooch",
  "pyregeon",
  "pystac-client",
  "rasterio",
  "rasterstats",
  "shapely>=2.0.0",
  "tqdm"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
  "commitizen",
  "pre-commit",
  "toml",
  "uv"
]
doc = [
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "setuptools",
  "sphinx",
  "sphinxemoji"
]
pdal = [
  "pdal"
]
test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov"
]

[project.urls]
Repository = "https://github.com/martibosch/swisstopopy"

[tool.codespell]
skip = "docs/overview.ipynb"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "semver"

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "except ModuleNotFoundError",
  "except ImportError"
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.coverage.run]
source = ["swisstopopy"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
pdal = ">=2.9.3,<3"
gdal = ">=3.12.1,<4"

[tool.pixi.environments]
default = {features = ["default"], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
doc = {features = ["doc", "pdal"], solve-group = "default"}
test = {features = ["pdal", "test"], solve-group = "default"}
pdal = {features = ["pdal"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
build = "uv build"

[tool.pixi.feature.doc.tasks]
build-doc = "sphinx-build docs docs/_build"

[tool.pixi.feature.test.tasks]
test = "pytest -s --cov=swisstopopy --cov-report=xml tests"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "D",
  "E",
  "F",
  "I"
]

[tool.ruff.lint.isort]
known-first-party = [
  "swisstopopy"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401",
  "F403"
]
"tests/test_swisstopopy.py" = [
  "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "swisstopopy"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
